# Crew_ai_v1

./: README.md  README_OTIMIZADO.md  pyproject.toml  test_integration_location.py
knowledge/: investimentos2025.csv  municipios_sp.txt  piesp_captados_2025.csv  user_preference.txt
logs/: performance_report_20250715_162010.json  performance_report_20250716_135555.json  performance_report_20250716_143002.json  performance_report_20250716_160355.json  performance_report_20250716_161621.json
output/: deduplicar_noticias.py  noticias_unicas_do_dia.json  relatorio_final_01-07-2025_10-07-54.json  relatorio_final_01-07-2025_10-20-15.json  relatorio_final_01-07-2025_10-40-57.json  relatorio_final_01-07-2025_11-06-56.json  relatorio_final_02-06-2025_13-37-56.json  relatorio_final_02-06-2025_14-00-37.json  relatorio_final_02-06-2025_14-13-30.json  relatorio_final_02-07-2025_09-34-34.json  relatorio_final_02-07-2025_11-20-10.json  relatorio_final_02-07-2025_12-03-39.json  relatorio_final_02-07-2025_12-15-46.json  relatorio_final_02-07-2025_12-23-06.json  relatorio_final_03-06-2025_13-39-20.json  relatorio_final_03-06-2025_14-10-05.json  relatorio_final_03-06-2025_14-51-06.json  relatorio_final_03-07-2025_13-40-44.json  relatorio_final_03-07-2025_14-36-07.json  relatorio_final_03-07-2025_14-44-55.json  relatorio_final_03-07-2025_15-15-38.json  relatorio_final_04-06-2025_13-28-21.json  relatorio_final_04-06-2025_14-29-18.json  relatorio_final_04-06-2025_15-04-39.json  relatorio_final_04-06-2025_15-18-43.json  relatorio_final_04-06-2025_15-33-23.json  (+194 more)
src/: .env.example  crew.py  (+3 more)
(+19 files in other folders)
