[project]
name = "teste"
version = "0.1.0"
description = "teste using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
teste = "teste.main:run"
run_crew = "teste.main:run"
train = "teste.main:train"
replay = "teste.main:replay"
test = "teste.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
